--- a/Application/src/main/res/layout-land/fragment_camera2_basic.xml
+++ b/Application/src/main/res/layout-land/fragment_camera2_basic.xml
@@ -38,18 +38,19 @@
         android:theme="@style/Theme.Transparent"
         android:background="@color/transparent">
 
+        <com.example.android.camera2basic.CustomImageVIew
+            android:layout_width="1280px"
+            android:layout_height="fill_parent"
+            android:id="@+id/imgView"
+            android:layout_gravity="left|top"
+            android:scaleType="matrix" />
+
         <Button
             android:id="@+id/picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|right|top"
             android:text="@string/start" />
-
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/imgView"
-            android:layout_gravity="left|top" />
 
 
     </FrameLayout>
